A lot of small and big changes, restructuring etc.

--- a/01_Data_Gathering.ipynb
+++ b/01_Data_Gathering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Some Control Variables\n",
     "\n",
-    "DOWNLOAD_PWC_DATA = True # If set to true, the PWC data will be downloaded. If files are already there, they will be deleted and downloaded again.\n",
+    "DOWNLOAD_PWC_DATA = False # If set to true, the PWC data will be downloaded. If files are already there, they will be deleted and downloaded again.\n",
     "\n",
     "PWC_DATA_PATH = \"data/pwc/\" # If this is set to none, the JSON files will be downloaded to the data directory\n",
     "PWC_API_PATH = \"data/pwc_api/\" # If this is set to none, the JSON files will be downloaded to the data directory\n",
@@ -51,35 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading JSON files from PapersWithCode\n",
-      "Deleting old papers.json\n",
-      "Deleting old methods.json\n",
-      "Deleting old repos.json\n",
-      "Deleting old evaluation_tables.json\n",
-      "Deleting old datasets.json\n",
-      "Downloaded papers.json.gz. Size is 342.64 MB\n",
-      "Unzipped papers.json.gz. Size is 1335.52 MB\n",
-      "\n",
-      "Downloaded methods.json.gz. Size is 0.75 MB\n",
-      "Unzipped methods.json.gz. Size is 3.16 MB\n",
-      "\n",
-      "Downloaded repos.json.gz. Size is 18.33 MB\n",
-      "Unzipped repos.json.gz. Size is 114.14 MB\n",
-      "\n",
-      "Downloaded evaluation_tables.json.gz. Size is 13.69 MB\n",
-      "Unzipped evaluation_tables.json.gz. Size is 165.69 MB\n",
-      "\n",
-      "Downloaded datasets.json.gz. Size is 3.03 MB\n",
-      "Unzipped datasets.json.gz. Size is 13.87 MB\n",
-      "\n",
-      "Downloaded JSON files from PapersWithCode and saved them to data/pwc\n"
+      "Not downloading JSON files from PapersWithCode\n"
      ]
     }
    ],
@@ -206,374 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting all areas...\n",
-      "Done.\n",
-      "Getting all tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "003b46eb179f4d379a9aebff15b63d25",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/16 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area adversarial. Got 21 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0e2808a4f4d44bfb5524e2470486d23",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area audio. Got 67 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbb7b73334724f90add124e204084ffb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area computer-code. Got 59 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f7502ed985f43f890145d68357f61b0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area computer-vision. Got 1304 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "927c88fe91f94017a7a6dcfafeb05af0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/14 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area graphs. Got 83 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a21724eef9004f4c9343d663901cc44e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area knowledge-base. Got 33 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b52c55840634c92bb9cb6198f3cc495",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area medical. Got 252 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6af168d77f340f8bbffda1abc0d5d5a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area methodology. Got 178 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b6510a8909a4c7cafc8ca52bab3ec3e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area miscellaneous. Got 246 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ccf20ef03654ac3a47dabeaeebacf4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area music. Got 24 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b85ab197c3784ce0b2a5f9d32e72dc3f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area natural-language-processing. Got 632 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92f28f0f8dcf42a298de0cab8cd40e7d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area playing-games. Got 42 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85b058a555c040d2a0288dc05687a605",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area reasoning. Got 63 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1700f7b23a8f4388a431b9805e00f3f3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area robots. Got 42 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21290cfba97c458db0ac62a4859230be",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area speech. Got 77 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "860c16bced9c40d5abbd81758dcee806",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting tasks from area time-series. Got 92 tasks...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "027206f916a84b12b2f0015b7ff4c67d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n",
-      "Saved 16 areas with corresponding tasks to data/pwc_api/areas.json.\n"
+      "Not downloading areas and tasks from PapersWithCode\n"
      ]
     }
    ],
@@ -628,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +257,9 @@
       "Loading JSON files into dataframes...\n",
       "Loaded JSON files into dataframes\n",
       "\n",
-      "Got 410364 papers, 2156 methods, 212222 repos, 8822 datasets and 16 areas.\n"
+      "Got 411124 papers, 2158 methods, 212813 repos, 8834 datasets and 16 areas.\n",
+      "Checking for duplicates in papers_df...\n",
+      "Found 0 duplicates.\n"
      ]
     }
    ],
@@ -654,12 +275,16 @@
     "areas_df = pd.read_json(PWC_API_PATH + 'areas.json')\n",
     "print(\"Loaded JSON files into dataframes\")\n",
     "print(\"\")\n",
-    "print(f\"Got {len(papers_df)} papers, {len(methods_df)} methods, {len(repos_df)} repos, {len(datasets_df)} datasets and {len(areas_df)} areas.\")"
+    "print(f\"Got {len(papers_df)} papers, {len(methods_df)} methods, {len(repos_df)} repos, {len(datasets_df)} datasets and {len(areas_df)} areas.\")\n",
+    "\n",
+    "# Print the number of duplicates inside the papers_df\n",
+    "print(\"Checking for duplicates in papers_df...\")\n",
+    "print(f\"Found {len(papers_df[papers_df.duplicated(subset=['paper_url'])])} duplicates.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -668,17 +293,17 @@
      "text": [
       "Preprocessing dataframes...\n",
       "\n",
-      "[NODES] Got 410364 rows in papers_df\n",
-      "[NODES] Got 2156 rows in methods_df\n",
-      "[NODES] Got 212222 rows in repos_df\n",
+      "[NODES] Got 411124 rows in papers_df\n",
+      "[NODES] Got 2158 rows in methods_df\n",
+      "[NODES] Got 212813 rows in repos_df\n",
       "[NODES] Got 16 rows in areas_df\n",
-      "[NODES] Got 3215 rows in tasks_df\n",
-      "[NODES] Got 8822 rows in datasets_df\n",
-      "[EDGES] Got 15129 rows in datasets_tasks_df\n",
-      "[EDGES] Got 669552 rows in papers_tasks_df\n",
-      "[EDGES] Got 435782 rows in papers_methods_df\n",
-      "[EDGES] Got 212222 rows in papers_repos_df\n",
-      "[EDGES] Got 3215 rows in tasks_areas_df\n",
+      "[NODES] Got 3216 rows in tasks_df\n",
+      "[NODES] Got 8834 rows in datasets_df\n",
+      "[EDGES] Got 15517 rows in datasets_tasks_df\n",
+      "[EDGES] Got 680984 rows in papers_tasks_df\n",
+      "[EDGES] Got 437861 rows in papers_methods_df\n",
+      "[EDGES] Got 212813 rows in papers_repos_df\n",
+      "[EDGES] Got 3216 rows in tasks_areas_df\n",
       "\n",
       "Done preprocessing dataframes!\n"
      ]
@@ -692,7 +317,7 @@
     "papers_df['id'] = papers_df['paper_url'].apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16)))\n",
     "methods_df['name'] = methods_df['name'].apply(lambda x: x.lower().replace(\" \", \"-\"))\n",
     "methods_df['id'] = (\"method/\" + methods_df['name']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16)))\n",
-    "repos_df['id'] = repos_df['repo_url'].apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16)))\n",
+    "repos_df['id'] = (\"repo/\" + repos_df['repo_url']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16)))\n",
     "repos_df['paper_id'] = repos_df['paper_url'].apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16)))\n",
     "areas_df['id_md5'] = (\"area/\" + areas_df['id']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16)))\n",
     "print(f\"[NODES] Got {len(papers_df)} rows in papers_df\")\n",
@@ -764,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -839,6 +464,8 @@
     "- Get OpenAlex Authors (and edges to papers) for each paper (using the OpenAlex Postgres Database)\n",
     "- Get OpenAlex Institutions (and edges to authors) for each paper (using the OpenAlex Postgres Database)\n",
     "- Get OpenAlex Citiation Info (and edges to papers) for each paper (using the OpenAlex Postgres Database)\n",
+    "\n",
+    "Also execute the *01b_Arxiv_Fulltext_Helper.py* to download the fulltext of all papers from Arxiv. This is done in a separate script because it takes a lot of time and is not necessary for the other steps.\n",
     "\n",
     "#### Info:\n",
     "JSONs and CSVs for Authors, Institutions and their respective edges are saved automatically in the filesystem, they do not have to be reimported here..."
