--- a/02_Database_Generation.ipynb
+++ b/02_Database_Generation.ipynb
@@ -16,13 +16,12 @@
    "source": [
     "import os\n",
     "import hashlib\n",
-    "from tqdm.notebook import trange, tqdm\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,77 +44,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wilinski/.local/lib/python3.11/site-packages/pandas/core/dtypes/astype.py:189: RuntimeWarning: invalid value encountered in cast\n",
-      "  return values.astype(dtype, copy=copy)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# If new embeddings, keywords and OpenAlex Stuff are created, load them into the dataframes\n",
-    "papers_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_processed.json', dtype={\"id\": str})\n",
-    "methods_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'methods_processed.json', dtype={\"id\": str})\n",
-    "tasks_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'tasks_processed.json', dtype={\"area_id_md5\": str, \"id_md5\": str})\n",
-    "areas_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'areas_processed.json', dtype={\"id_md5\": str})\n",
-    "datasets_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'datasets_processed.json', dtype={\"id\": str})\n",
-    "repos_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'repos.json', dtype={\"id\": str})\n",
-    "\n",
-    "datasets_tasks_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'datasets_tasks.json', dtype={\"dataset_id\": str, \"task_id\": str, \"task_id_md5\": str})\n",
-    "papers_tasks_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_tasks.json', dtype={\"paper_id\": str, \"task_id\": str, \"task_id_md5\": str})\n",
-    "papers_methods_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_methods.json', dtype={\"paper_id\": str, \"method_id\": str, \"method_id_md5\": str})\n",
-    "papers_repos_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_repos.json', dtype={\"paper_id\": str, \"repo_id\": str})\n",
-    "tasks_areas_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'tasks_areas.json', dtype={\"id\": str, \"area\": str})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grabbing all keywords from all dataframes...\n",
-      "Got 1356478 keywords from all dataframes!\n",
-      "Got 346617 unique keywords from all dataframes (Around 25.552718142129837%).\n",
-      "[NODES] Got 346617 rows in keywords_df\n",
       "Creating edges between papers and keywords...\n",
-      "[EDGES] Got 1264502 rows in papers_keywords_df\n",
-      "Creating edges between methods and keywords...\n",
-      "[EDGES] Got 16066 rows in methods_keywords_df\n",
-      "Creating edges between datasets and keywords...\n",
-      "[EDGES] Got 66941 rows in datasets_keywords_df\n",
-      "Creating edges between tasks and keywords...\n",
-      "[EDGES] Got 8969 rows in tasks_keywords_df\n",
-      "Saving keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH...\n",
-      "Saved keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH!\n"
+      "[EDGES] Got 4429807 rows in papers_keywords_df\n"
      ]
     }
    ],
    "source": [
-    "# Grab all keywords from all dataframes and put them into a list. Remember that the keyword column in each dataframe is a list of dicts with the keyword and the score. I only need the keyword here.\n",
-    "print(\"Grabbing all keywords from all dataframes...\")\n",
-    "paper_keywords = [keyword[0] for row in papers_df[\"abstract_keywords\"] for keyword in row]\n",
-    "method_keywords = [keyword[0] for row in methods_df[\"description_keywords\"] for keyword in row]\n",
-    "dataset_keywords = [keyword[0] for row in datasets_df[\"description_keywords\"] for keyword in row]\n",
-    "task_keywords = [keyword[0] for row in tasks_df[\"description_keywords\"] for keyword in row]\n",
+    "# First compute everything for the papers_df, because it is too large to fit in memory with the other dataframes...\n",
     "\n",
-    "# Merge the lists and remove duplicates\n",
-    "all_keywords = list(paper_keywords + method_keywords + dataset_keywords + task_keywords)\n",
-    "print(f\"Got {len(all_keywords)} keywords from all dataframes!\")\n",
-    "unique_keywords = list(set(all_keywords))\n",
-    "print(f\"Got {len(unique_keywords)} unique keywords from all dataframes (Around {(len(unique_keywords) / len(all_keywords))*100}%).\")\n",
-    "\n",
-    "# Create a df with two columns: id and keyword. Assign each keyword a unique id the same way as the other nodes\n",
-    "keywords_df = pd.DataFrame(unique_keywords, columns=[\"keyword\"])\n",
-    "keywords_df['id'] = (\"keyword/\" + keywords_df['keyword']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16)))\n",
-    "keywords_df = keywords_df.reset_index(drop=True)\n",
-    "# Put the id column in front\n",
-    "keywords_df = keywords_df[['id', 'keyword']]\n",
-    "print(f\"[NODES] Got {len(keywords_df)} rows in keywords_df\")\n",
+    "papers_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_processed.json', dtype={\"id\": str}, encoding=\"utf-8\")\n",
+    "paper_keywords = [keyword[0] for row in papers_df[\"abstract_keywords\"] if row is not None for keyword in row if keyword]\n",
     "\n",
     "# Create edges between papers and keywords\n",
     "print(\"Creating edges between papers and keywords...\")\n",
@@ -131,6 +72,110 @@
     "                      .reindex(columns=['paper_id', 'keyword_id', 'score'])\n",
     "                      .reset_index(drop=True))\n",
     "print(f\"[EDGES] Got {len(papers_keywords_df)} rows in papers_keywords_df\")\n",
+    "\n",
+    "# papers_df\n",
+    "papers_df = papers_df.rename(columns={\"id\": \"id:ID\"})\n",
+    "papers_df = papers_df[[\"id:ID\"] + [col for col in papers_df.columns if col != \"id:ID\"]]\n",
+    "papers_df[':LABEL'] = \"Paper\"\n",
+    "\n",
+    "print(\"Saving papers_df...\")\n",
+    "papers_df.to_csv(NEO4J_PATH + \"papers.csv\", index=False)\n",
+    "\n",
+    "# Delete papers_df to free memory\n",
+    "del papers_df\n",
+    "print(\"Done and deleted papers_df\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wilinski/.local/lib/python3.11/site-packages/pandas/core/dtypes/astype.py:189: RuntimeWarning: invalid value encountered in cast\n",
+      "  return values.astype(dtype, copy=copy)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If new embeddings, keywords and OpenAlex Stuff are created, load them into the dataframes\n",
+    "# papers_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_processed.json', dtype={\"id\": str}, encoding=\"utf-8\")\n",
+    "methods_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'methods_processed.json', dtype={\"id\": str}, encoding=\"utf-8\")\n",
+    "tasks_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'tasks_processed.json', dtype={\"area_id_md5\": str, \"id_md5\": str}, encoding=\"utf-8\")\n",
+    "areas_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'areas_processed.json', dtype={\"id_md5\": str}, encoding=\"utf-8\")\n",
+    "datasets_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'datasets_processed.json', dtype={\"id\": str}, encoding=\"utf-8\")\n",
+    "repos_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'repos.json', dtype={\"id\": str}, encoding=\"utf-8\")\n",
+    "\n",
+    "datasets_tasks_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'datasets_tasks.json', dtype={\"dataset_id\": str, \"task_id\": str, \"task_id_md5\": str}, encoding=\"utf-8\")\n",
+    "papers_tasks_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_tasks.json', dtype={\"paper_id\": str, \"task_id\": str, \"task_id_md5\": str}, encoding=\"utf-8\")\n",
+    "papers_methods_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_methods.json', dtype={\"paper_id\": str, \"method_id\": str, \"method_id_md5\": str}, encoding=\"utf-8\")\n",
+    "papers_repos_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_repos.json', dtype={\"paper_id\": str, \"repo_id\": str}, encoding=\"utf-8\")\n",
+    "tasks_areas_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'tasks_areas.json', dtype={\"id\": str, \"area\": str}, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grabbing all keywords from all dataframes...\n",
+      "Got 4521885 keywords from all dataframes!\n",
+      "Got 908211 unique keywords from all dataframes (Around 20.084787649398425%).\n",
+      "[NODES] Got 908211 rows in keywords_df\n",
+      "Creating edges between methods and keywords...\n",
+      "[EDGES] Got 16077 rows in methods_keywords_df\n",
+      "Creating edges between datasets and keywords...\n",
+      "[EDGES] Got 67027 rows in datasets_keywords_df\n",
+      "Creating edges between tasks and keywords...\n",
+      "[EDGES] Got 8974 rows in tasks_keywords_df\n",
+      "Saving keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH...\n",
+      "Saved keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grab all keywords from all dataframes and put them into a list. Remember that the keyword column in each dataframe is a list of dicts with the keyword and the score. I only need the keyword here.\n",
+    "print(\"Grabbing all keywords from all dataframes...\")\n",
+    "# paper_keywords = [keyword[0] for row in papers_df[\"abstract_keywords\"] if row is not None for keyword in row if keyword]\n",
+    "method_keywords = [keyword[0] for row in methods_df[\"description_keywords\"] if row is not None for keyword in row if keyword]\n",
+    "dataset_keywords = [keyword[0] for row in datasets_df[\"description_keywords\"] if row is not None for keyword in row if keyword]\n",
+    "task_keywords = [keyword[0] for row in tasks_df[\"description_keywords\"] if row is not None for keyword in row if keyword]\n",
+    "\n",
+    "# Merge the lists and remove duplicates\n",
+    "all_keywords = list(paper_keywords + method_keywords + dataset_keywords + task_keywords)\n",
+    "print(f\"Got {len(all_keywords)} keywords from all dataframes!\")\n",
+    "unique_keywords = list(set(all_keywords))\n",
+    "print(f\"Got {len(unique_keywords)} unique keywords from all dataframes (Around {(len(unique_keywords) / len(all_keywords))*100}%).\")\n",
+    "\n",
+    "# Create a df with two columns: id and keyword. Assign each keyword a unique id the same way as the other nodes\n",
+    "keywords_df = pd.DataFrame(unique_keywords, columns=[\"keyword\"])\n",
+    "keywords_df['id'] = (\"keyword/\" + keywords_df['keyword']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16)))\n",
+    "keywords_df = keywords_df.reset_index(drop=True)\n",
+    "# Put the id column in front\n",
+    "keywords_df = keywords_df[['id', 'keyword']]\n",
+    "print(f\"[NODES] Got {len(keywords_df)} rows in keywords_df\")\n",
+    "\n",
+    "# # Create edges between papers and keywords\n",
+    "# print(\"Creating edges between papers and keywords...\")\n",
+    "# papers_keywords_df = (papers_df[['id', 'abstract_keywords']]\n",
+    "#                       .rename(columns={'abstract_keywords': 'keywords'})\n",
+    "#                       .explode('keywords')\n",
+    "#                       .dropna()\n",
+    "#                       .assign(keyword=lambda df: df['keywords'].str[0], score=lambda df: df['keywords'].str[1])\n",
+    "#                       .drop(columns=['keywords'])\n",
+    "#                       .assign(keyword_id=lambda df: (\"keyword/\" + df['keyword']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16))))\n",
+    "#                       .drop(columns=['keyword'])\n",
+    "#                       .rename(columns={'id': 'paper_id'})\n",
+    "#                       .reindex(columns=['paper_id', 'keyword_id', 'score'])\n",
+    "#                       .reset_index(drop=True))\n",
+    "# print(f\"[EDGES] Got {len(papers_keywords_df)} rows in papers_keywords_df\")\n",
     "\n",
     "# Create edges between methods and keywords\n",
     "print(\"Creating edges between methods and keywords...\")\n",
@@ -189,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -209,12 +254,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b3a8f858ccf4c4c88b2ba004cf37223",
+       "model_id": "b88753334ad24896a0f5f128c6792567",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Batches:   0%|          | 0/10832 [00:00<?, ?it/s]"
+       "Batches:   0%|          | 0/28382 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -244,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -263,10 +308,10 @@
     "print(\"Creating CSV importable files for neo4j...\")\n",
     "\n",
     "# Change the column names slightly to match the neo4j import format https://neo4j.com/docs/operations-manual/current/tutorial/neo4j-admin-import/\n",
-    "# papers_df\n",
-    "papers_df = papers_df.rename(columns={\"id\": \"id:ID\"})\n",
-    "papers_df = papers_df[[\"id:ID\"] + [col for col in papers_df.columns if col != \"id:ID\"]]\n",
-    "papers_df[':LABEL'] = \"Paper\"\n",
+    "# # papers_df\n",
+    "# papers_df = papers_df.rename(columns={\"id\": \"id:ID\"})\n",
+    "# papers_df = papers_df[[\"id:ID\"] + [col for col in papers_df.columns if col != \"id:ID\"]]\n",
+    "# papers_df[':LABEL'] = \"Paper\"\n",
     "# methods_df\n",
     "methods_df = methods_df.rename(columns={\"id\": \"id:ID\"})\n",
     "methods_df['id:ID'] = methods_df['id:ID'].astype(str)\n",
@@ -350,7 +395,7 @@
     "\n",
     "# Save the dataframes to csv files into the neo4j import folder\n",
     "print(\"Saving CSV files to neo4j import folder...\")\n",
-    "papers_df.to_csv(NEO4J_PATH + \"papers.csv\", index=False)\n",
+    "# papers_df.to_csv(NEO4J_PATH + \"papers.csv\", index=False)\n",
     "methods_df.to_csv(NEO4J_PATH + \"methods.csv\", index=False)\n",
     "repos_df.to_csv(NEO4J_PATH + \"repos.csv\", index=False)\n",
     "areas_df.to_csv(NEO4J_PATH + \"areas.csv\", index=False)\n",
@@ -371,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +427,7 @@
       "\n",
       "=== COMMAND ===\n",
       "\n",
-      "bin/neo4j-admin database import full --nodes=import/authors.csv --nodes=import/institutions.csv --nodes=import/fulltexts.csv --nodes=import/papers.csv --nodes=import/methods.csv --nodes=import/repos.csv --nodes=import/areas.csv --nodes=import/tasks.csv --nodes=import/datasets.csv --nodes=import/keywords.csv --relationships=import/authors_papers.csv --relationships=import/authors_institutions.csv --relationships=import/papers_citations.csv --relationships=import/._papers_citations.csv --relationships=import/papers_fulltexts.csv --relationships=import/datasets_tasks.csv --relationships=import/papers_tasks.csv --relationships=import/papers_methods.csv --relationships=import/papers_repos.csv --relationships=import/tasks_areas.csv --relationships=import/papers_keywords.csv --relationships=import/methods_keywords.csv --relationships=import/datasets_keywords.csv --relationships=import/tasks_keywords.csv --multiline-fields --skip-bad-relationships --bad-tolerance=100000000 --skip-duplicate-nodes --overwrite_destination neo4j\n",
+      "bin/neo4j-admin database import full --nodes=import/authors.csv --nodes=import/institutions.csv --nodes=import/fulltexts.csv --nodes=import/papers.csv --nodes=import/methods.csv --nodes=import/repos.csv --nodes=import/areas.csv --nodes=import/tasks.csv --nodes=import/datasets.csv --nodes=import/keywords.csv --relationships=import/authors_papers.csv --relationships=import/authors_institutions.csv --relationships=import/papers_citations.csv --relationships=import/papers_fulltexts.csv --relationships=import/datasets_tasks.csv --relationships=import/papers_tasks.csv --relationships=import/papers_methods.csv --relationships=import/papers_repos.csv --relationships=import/tasks_areas.csv --relationships=import/papers_keywords.csv --relationships=import/methods_keywords.csv --relationships=import/datasets_keywords.csv --relationships=import/tasks_keywords.csv --multiline-fields --read-buffer-size=8000000 --skip-bad-relationships --bad-tolerance=100000000 --skip-duplicate-nodes --overwrite-destination neo4j\n",
       "\n",
       "=== END COMMAND ===\n",
       "\n",
@@ -398,10 +443,12 @@
     "# Look into the neo4j folder and list all csv files that have no underscore in their name\n",
     "node_csv_files = [file for file in os.listdir(NEO4J_PATH) if file.endswith(\".csv\") and \"_\" not in file]\n",
     "relationship_csv_files = [file for file in os.listdir(NEO4J_PATH) if file.endswith(\".csv\") and \"_\" in file]\n",
+    "node_csv_files = [file for file in node_csv_files if not file.startswith(\"._\")] # Filter out all files that start with ._ (Mac OS hidden files)\n",
+    "relationship_csv_files = [file for file in relationship_csv_files if not file.startswith(\"._\")] # Filter out all files that start with ._ (Mac OS hidden files)\n",
     "neo4j_command_start = \"bin/neo4j-admin database import full \"\n",
-    "neo4j_command_end = f\"--multiline-fields --skip-bad-relationships --bad-tolerance=100000000 --skip-duplicate-nodes\"\n",
+    "neo4j_command_end = f\"--multiline-fields --read-buffer-size=8000000 --skip-bad-relationships --bad-tolerance=100000000 --skip-duplicate-nodes\"\n",
     "if REPLACE_DB:\n",
-    "    neo4j_command_end += \" --overwrite_destination\"\n",
+    "    neo4j_command_end += \" --overwrite-destination\"\n",
     "    \n",
     "# Add a \"--nodes=import/...\" for each node csv file\n",
     "neo4j_command_nodes = \"\"\n",
