--- a/06_Validation.ipynb
+++ b/06_Validation.ipynb
@@ -131,8 +131,7 @@
     "pwc_oalex_ids[\"task_extended_aho_neg\"] = pwc_oalex_ids[\"task_extended_aho_neg\"].apply(lambda x: [y[1][1] for y in x])\n",
     "pwc_oalex_ids[\"task_extended_aho_neg_length\"] = pwc_oalex_ids[\"task_extended_aho_neg\"].apply(lambda x: len(x))\n",
     "\n",
-    "print(\"Done.\")\n",
-    "\n"
+    "print(\"Done.\")"
    ]
   }
  ],
